Adds more documentation